--- a/shareit/src/main/webapp/css/editor.css
+++ b/shareit/src/main/webapp/css/editor.css
@@ -9,11 +9,6 @@
 	margin-left:0%;
 }
 
-.navbar-inverse .nav li.dropdown.open > .dropdown-toggle, .navbar-inverse .nav li.dropdown.active > .dropdown-toggle, .navbar-inverse .nav li.dropdown.open.active > .dropdown-toggle {
-    background-color: #5bc0de;
-}
-
-.docIdDiv{
-	padding-left:10px; 
-	padding-right:10px;
+#docIdDiv {
+	margin-bottm: 5%;
 }
